crates/htui/tests/snapshots/skills_matrix__effective_globs.snap
---
source: crates/htui/tests/skills_matrix.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 runs
 1 Backlog  2 Skills  3 Settings  4 Chat
 Skills │ Templates
┌ Attachments ───────────────────────────────┐┌ rust-style @ global ───────────────────────────────┐
│  level             rust-style   tests      ││ activation: always                                 │
│  global            ·            ·          ││ pin:        latest (v2)                            │
│  vulkan-tutorials  ·            ·          ││ position:   0                                      │
│  analysis/research ·            ·          ││ repo:       every repo                             │
│  analysis/verdict  ·            ·          ││ globs (one per line):                              │
│  bug/reproduce     ·            ·          ││docs/**                                             │
│  bug/fix           ·            ·          ││ languages (one per line):                          │
│  bug/review        ·            ·          ││shell                                               │
│  feature/prd       ·            ·          ││ known: c cpp csharp go java javascript markdown    │
│  feature/plan      ·            ·          ││python rust shell sql toml typescript yaml          │
│  feature/implement ·            ·          ││ effective globs:                                   │
│  feature/review    ·            ·          ││  docs/**                                           │
│  refactor/plan     ·            ·          ││  **/*.sh                                           │
│  refactor/implement·            ·          ││  **/*.bash                                         │
│  refactor/review   ·            ·          ││  **/*.zsh                                          │
│  tooling/plan      ·            ·          ││                                                    │
│  tooling/implement ·            ·          ││                                                    │
│  tooling/review    ·            ·          ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
│                                            ││                                                    │
└────────────────────────────────────────────┘└────────────────────────────────────────────────────┘

 Tab next field  Ctrl+S save  A activation  p pin  R repo  Esc cancel  L1:C6
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces
